...
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginEnd="48dp" />
</LinearLayout>

    <ListView
        android:id="@+id/adminEventsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
...
