...

        <include
            android:id="@+id/organizerListMenu"
            layout="@layout/item_admin_menu" />

        <include
            android:id="@+id/eventListMenu"
            layout="@layout/item_admin_menu" />

        <include
            android:id="@+id/imagesViewMenu"
            layout="@layout/item_admin_menu" />

        <include
            android:id="@+id/userListMenu"
            layout="@layout/item_admin_menu" />

        <include
            android:id="@+id/exportNotificationsMenu"
            layout="@layout/item_admin_menu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
...
